--- a/.jscsrc
+++ b/.jscsrc
@@ -1,5 +1,6 @@
 {
   "preset": "crockford",
   "validateIndentation": 2,
-  "requireVarDeclFirst": false
+  "requireVarDeclFirst": false,
+  "requireMultipleVarDecl": true
 }
