--- a/.jscsrc
+++ b/.jscsrc
@@ -2,5 +2,5 @@
   "preset": "crockford",
   "validateIndentation": 2,
   "requireVarDeclFirst": false,
-  "requireMultipleVarDecl": true
+  "requireMultipleVarDecl": false
 }
